* Fix ODS output appearing on 'Title page' instead of 'Search results' (Erik H)
* Fix Edit Vendor address misses 'Save' button (Erik H, #2709)
* Fix Recurring Transactions screen fails on second access (Erik H, #2888)
* Fix 'On Hand' goods search filter not being applied (Erik H, #2845)
* Clean up issues found by Debian's 'lintian' (Erik H, Robert C)

Erik H is Erik Huelsmann
Robert C is Robert James Clay


Changelog for 1.5.7
* Fix missing trailing zeros in cheque printing (Erik H, #2565)
* Change comparison periods selector to a number spinner (Erik H)
* Fix http error response (Yves L)
* Fix Salesperson field not displayed (Nick P, #2784)
* Fix can't delete unused account after books closed (Nick P, #2800)
* Fix Contact search on address broken (Nick P, #2490)
* Fix parts with capitals can't be added to AP invoices (Erik H)
* Change 'Super-user login' to 'Database admin login' (Erik H, #2654)
* Fix reconciliation loads parser from non-existing location (Erik H, #2313)
* Clarify 'Import (Yes/No)' on user creation (Erik H, #1510)
* Fix left menu initially too narrow (Erik H, #955)

Erik H is Erik Huelsmann
Yves L is Yves Lavoie
Nick P is Nick Prater


Changelog for 1.5.6
* Fix syntax error in LaTeX templates for printed documents (Erik H)
* Refactor filter pages for income statement and balance sheet (Erik H)
* Fix reversal of payments against non-eca-default AR/AP account (Erik H, #2558)

Erik H is Erik Huelsmann


Changelog for 1.5.5
* Fix name of the sequence being updated in the 1.3 migration script (Erik H)

Erik H is Erik Huelsmann


Changelog for 1.5.4
* Updated Dojo from 1.10.6 to 1.10.7 (Erik H)
* Add missing defaults in ledgersmb.conf 'database' section (David G, #2632)
* Add 2 missing RHEL dependencies to Makefile (David G)
* Add conf/README.md describing the content of conf/ (David G)
* Fixed bug in template processing only seen on CentOS (Chris T)
* Transaction forgets payment account on Update (Nick P, #2580)